--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-SandboxProjects/TestProjects.GlslPluginTest/Product/Scripts/* linguist-generated=true
+SandboxProjects/TestProjects.GlslPluginTest/Product/Scripts/**/* linguist-generated=true
