--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 SandboxProjects/TestProjects.GlslPluginTest/Product/Scripts/**/* linguist-generated=true
 SandboxProjects/TestProjects.TSPluginTest/Product/Scripts/**/* linguist-generated=true
+SandboxProjects/TestProjects.MetadataTest/Product/Scripts/**/* linguist-generated=true
